tests/paczka1/fuzzy1/31907030.err
Error in line 7: SKnzOq32 S126 43,2
Error in line 13: S878 SF24 244,F
Error in line 12: SKnzOq32 S351 60,2
Error in line 6: S878 S324 92,9
Error in line 23: S878 S126 37,5
Error in line 28: S878 S324 22,3
